--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Homveloper"
 description              : "게임 개발자가 되고 싶은"
 url                      : "https://homveloper.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "ToTo-Mo/homveloper.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "homveloper/homveloper.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -122,7 +122,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ToTo-Mo"
+      url: "https://github.com/homveloper"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
